# mcp-server-planton

./: .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_PIPELINE_LOGS.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  buf.gen.go.yaml  go.mod  go.sum  pyproject.toml  test_header_case.go  test_iam_vs_search.go  test_jwt_token.go  test_token.go  test_token_debug.go
.cursor/plans/: add-http-transport-support-5885061f.plan.md  add-local-install-9683812a.plan.md  clean_makefile_auto-release_71d9621c.plan.md  complete-http-transport-implementation-b34088f1.plan.md  fix-ci-buf-05865ae0.plan.md  fix-protobuf-conflict-b6edc09d.plan.md  fix-release-process-65a46357.plan.md  implement-github-branch-protection-rules-53c8966d.plan.md  per-user-api-key-auth-e75a4b24.plan.md  phase_1_foundation_9a103d2d.plan.md  phase_1a_infrachart_tools_f53b5e07.plan.md  phase_1b_infraproject_tools_1203b29a.plan.md  phase_1c_infrapipeline_tools_7e122775.plan.md  phase_3_apply_cloud_resource_90f81b63.plan.md  phase_3c_catalog_tools_48959d25.plan.md  phase_5_hardening_21b8473e.plan.md  phase_6a_implementation_0282016a.plan.md  phase_6e_advanced_operations_706b607e.plan.md  pre-pr_cleanup_mcp_server_f2a3e0cf.plan.md  private_module_ci_auth_86bdb527.plan.md  proto2schema_codegen_tool_4397fc42.plan.md  readme_restructure_819d36ab.plan.md  reorganize-mcp-documentation-8a211760.plan.md  (+8 more)
.github/: BRANCH_PROTECTION_SETUP.md  dependabot.yml  pull_request_template.md
docs/: configuration.md  development.md  http-transport.md  installation.md  service-hub-tools.md  tools.md
schemas/: embed.go
tools/: buf-generate-go.sh
(+994 files in other folders)
